# zcad

./: Cargo.toml  README.md
crates/zcad-app/src/: main.rs
crates/zcad-core/src/: async_core.rs  geometry.rs  input_parser.rs  lib.rs  parametric.rs  snap.rs  solver.rs  spatial.rs  version_control.rs
crates/zcad-file/: Cargo.toml  DXF_LIBRARY_EVALUATION.md
crates/zcad-file/src/: check_dxf.rs  dxf_io.rs  dxf_raw.rs  error.rs  lib.rs  native.rs
crates/zcad-renderer/src/: compute.rs  renderer.rs  tile.rs
crates/zcad-ui/src/: action.rs  command_line.rs  command_registry.rs  lib.rs  main_menu.rs  state.rs  toolbar.rs
crates/zcad-ui/src/actions/: draw_arc.rs  draw_circle.rs  draw_line.rs  draw_point.rs  draw_polyline.rs  draw_rectangle.rs  mod.rs  modify_copy.rs  modify_mirror.rs  modify_move.rs  modify_rotate.rs  modify_scale.rs  select.rs
docs/: FILE_FORMAT.md
